<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="career_id" translatable="false">career</string>
    <string name="cent_id" translatable="false">100click</string>
    <string name="cinq_id" translatable="false">500click</string>
    <string name="k_id" translatable="false">1kclick</string>
    <string name="dix_id" translatable="false">10kclick</string>
    <string name="marath_id" translatable="false">marathon</string>
    <string name="app_name" translatable="false">Button Rush</string>
    <string name="title_home">Click Challenge</string>
    <string name="title_dashboard">Career</string>
    <string name="welcome_message">Welcome to Career Mode !\nNow, let\'s attack and click on the button 🔴!</string>
    <string name="please_select_option">Please select an option</string>
    <string name="day_too_late">24h! You have exceeded the limit</string>
    <string name="your_record">Your record: %s</string>
    <string name="click_and_record">%s clicks ➝ %s</string>
    <string name="hours">%dh\u00A0</string>
    <string name="minutes">%dmin\u00A0</string>
    <string name="seconds">%ds\u00A0</string>
    <string name="milliseconds">%dms\u00A0</string>
    <string name="new_record">New record!!</string>
    <string name="dommage">Too bad!</string>
    <string name="close">CLOSE</string>
    <string name="goal_10">Goal: 10</string>
    <string name="goal_100">Goal: 100</string>
    <string name="goal_150">Goal: 150</string>
    <string name="goal_300">Goal: 300</string>
    <string name="goal_500">Goal: 500</string>
    <string name="button_1k">New button: 1,000</string>
    <string name="button_2_5k">New button: 2,500</string>
    <string name="button_5k">New button: 5,000</string>
    <string name="button_10k">New button: 10,000</string>
    <string name="button_15k">New button: 15,000</string>
    <string name="button_20k">New button: 20,000</string>
    <string name="button_30k">New button: 30,000</string>
    <string name="button_50k">New button: 50,000</string>
    <string name="button_100k">New button: 100,000</string>
    <string name="goal_million">Goal: Million!!</string>
    <string name="objectif_classement">Objective to climb the ranking: %d</string>
    <string name="save_before">Save your performance before...</string>
    <string name="bravo_three_hundred_goal_now">Congratulations!\nNow, goal: 300 (to unlock the global and friends ranking)</string>
    <string name="new_button_message">Oh! A new button!\nRule #1: Never forget to save your performance before stopping\nClick now to save</string>
    <string name="aaa_voila_la">Ah, much better this way!</string>
    <string name="ugly_button_message">The button isn\'t very beautiful... \uD83D\uDE1E \nFirst goal: 100 clicks to change the button</string>
    <string name="write_your_surname">Enter your nickname</string>
    <string name="it_is_now">It\'s now!</string>
    <string name="accept">Accept</string>
    <string name="alredy_taken_pseudo">This nickname is already taken. Choose another nickname.</string>
    <string name="twenty_minimum">The nickname must be less than 20 characters.</string>
    <string name="ranking_mode_title">Ranking: %s</string>
    <string name="ranking_default_title">Ranking</string>
    <string name="career">Career</string>
    <string name="one_k">1k</string>
    <string name="ten_k">10k</string>
    <string name="marathon">Marathon</string>
    <string name="pause">Pause</string>
    <string name="reprendre">Resume</string>
    <string name="stop">Stop</string>
    <string name="sprint">• Sprint:</string>
    <string name="endurance">• Endurance:</string>
    <string name="start">start</string>
    <string name="le_100_click">The 100 clicks</string>
    <string name="le_500_click">The 500 clicks</string>
    <string name="le_1k_click">The 1K clicks</string>
    <string name="le_10k_click">The 10K clicks</string>
    <string name="marathon_42k_click">Marathon 42K clicks</string>
    <string name="search_a_player">Search for a player</string>
    <string name="select_your_team">Select your team :</string>

    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends : %1$s</string>
    <string name="current_team">Current team :</string>
    <string name="une_erreur_est_survenue_r_essayer_plus_tard">An error occurred. Please try again later.</string>
    <string name="n_cessite_une_connection_internet">Requires an internet connection</string>
    <string name="chec_de_la_r_cup_ration_des_donn_es_de_l_utilisateur">Failed to retrieve user data.</string>
    <string name="l_utilisateur_n_existe_pas">User does not exist.</string>
    <string name="chec_de_la_suppression_de_l_ancien_pseudo">Failed to delete the old username.</string>
    <string name="chec_du_changement_de_pseudo">Failed to change the username.</string>
    <string name="pseudo_chang_avec_succ_s">Username changed successfully.</string>
</resources>
