<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textSize="18sp"
        android:layout_below="@id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textViewClicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:layout_below="@id/textViewTime"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reprendre"
        android:layout_below="@id/textViewClicks"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_below="@id/textViewClicks"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentStart="true" />

</RelativeLayout>