<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/card_view_circular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#43018786">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_sprint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_sprint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sprint"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp" />

                    <RadioGroup
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_sprint"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/le_100_click" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/le_500_click" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/le_1k_click" />

                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_endurance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_sprint">

                    <TextView
                        android:id="@+id/text_endurance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/endurance"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="10dp" />

                    <RadioGroup
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_endurance"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButton4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/le_10k_click" />

                        <RadioButton
                            android:id="@+id/radioButton5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/marathon_42k_click" />

                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/start_button_orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    app:layout_constraintTop_toBottomOf="@id/constraint_endurance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="5dp"
                    android:paddingHorizontal="25dp"/>

                <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                    android:id="@+id/trophy_cardview"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/start_button_orange"
                    app:layout_constraintTop_toBottomOf="@id/constraint_endurance"
                    android:backgroundTint="@color/adapter_blue"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/ranke_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/trophy_small"
                        android:layout_margin="5dp"/>
                    
                </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_pause_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/chrnonometer_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@id/number_click_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_circular"
            android:text="0:00:00.000"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/number_click_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@id/button_click"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chrnonometer_home"
            android:text="0"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/button_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="350dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/click_challenge_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_click_text"
            android:layout_marginHorizontal="20dp"/>
<!--        android:scaleType="fitCenter"-->
<!--        android:adjustViewBounds="true"-->

        <com.zimoliv.buttonrush.ui.home.ClickAnimationView
            android:id="@+id/clickAnimationView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/button_click"
            app:layout_constraintEnd_toEndOf="@+id/button_click"
            app:layout_constraintStart_toStartOf="@+id/button_click"
            app:layout_constraintTop_toTopOf="@+id/button_click" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8A000000"
        android:gravity="center"
        tools:context=".MainActivity"
        android:visibility="gone">

        <TextView
            android:id="@+id/countdownTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="80sp"
            android:textColor="#FFFFFF"
            android:text="3"
            tools:text="3"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
