<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ImageView
        android:layout_width="270dp"
        android:layout_height="350dp"
        android:alpha="0.19"
        android:src="@drawable/knight_happy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_profile"
        android:layout_marginEnd="-15dp"/>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/card_view_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF9800"
            android:paddingTop="10dp"
            android:paddingHorizontal="10dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/icon_set"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/person_fill0_wght400_grad0_opsz24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/icon_set"
                app:layout_constraintStart_toEndOf="@+id/icon_set"
                app:layout_constraintTop_toTopOf="@+id/icon_set">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/title_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/design_default_color_secondary_variant"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:text="User789" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/design_default_color_secondary_variant" />

                </LinearLayout>

                <EditText
                    android:id="@+id/edit_pseudo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_your_surname"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_edit_square_24"
                app:layout_constraintBottom_toBottomOf="@+id/icon_set"
                app:layout_constraintStart_toEndOf="@id/constraintLayout2"
                app:layout_constraintTop_toTopOf="@+id/icon_set"
                android:layout_marginStart="15dp"
                tools:src="@drawable/baseline_check_24" />

            <ImageButton
                android:id="@+id/imageButtonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_clear_24"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/icon_set"
                app:layout_constraintStart_toEndOf="@id/imageButton"
                app:layout_constraintTop_toTopOf="@id/icon_set"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/actual_country_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_team"
                android:textSize="28sp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@+id/icon_set"
                app:layout_constraintTop_toBottomOf="@+id/icon_set" />

            <TextView
                android:id="@+id/flag_unicode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/actual_country_text"
                app:layout_constraintStart_toEndOf="@+id/actual_country_text"
                app:layout_constraintTop_toTopOf="@+id/actual_country_text"
                tools:text="🇫🇷" />

            <ImageButton
                android:id="@+id/edit_flag_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_edit_square_24"
                app:layout_constraintBottom_toBottomOf="@+id/actual_country_text"
                app:layout_constraintStart_toEndOf="@id/flag_unicode_text"
                app:layout_constraintTop_toTopOf="@+id/actual_country_text"
                android:layout_marginStart="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/career"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_profile"
        app:layout_constraintBottom_toTopOf="@id/constraint_sprint"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="29sp"
        android:textStyle="bold"
        android:textColor="@color/adapter_reder"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        android:text="0"
        tools:text="4 564" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_sprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toTopOf="@id/friens_and_number">

        <TextView
            android:id="@+id/text_sprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sprint"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_sprint">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:text="@string/le_100_click" />

                <TextView
                    android:id="@+id/click100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:layout_marginStart="10dp"
                    tools:text=": 48,6 s" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_24"
                    android:layout_marginStart="10dp"
                    app:tint="@color/adapter_green" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:text="@string/le_500_click" />

                <TextView
                    android:id="@+id/click500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="19sp"
                    tools:text=": 48,6 s" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_24"
                    android:layout_marginStart="10dp"
                    app:tint="@color/adapter_green" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:text="@string/le_1k_click" />

                <TextView
                    android:id="@+id/click1k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:layout_marginStart="10dp"
                    tools:text=": 48,6 s" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_24"
                    android:layout_marginStart="10dp"
                    app:tint="@color/adapter_green" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/text_endurance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endurance"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_endurance">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:text="@string/le_10k_click" />

                <TextView
                    android:id="@+id/click10k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:layout_marginStart="10dp"
                    tools:text=": 48,6 s" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_24"
                    android:layout_marginStart="10dp"
                    app:tint="@color/adapter_green" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:text="@string/marathon_42k_click" />

                <TextView
                    android:id="@+id/click42k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="19sp"
                    tools:text=": --:--" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_24"
                    android:layout_marginStart="10dp"
                    app:tint="@color/adapter_green" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/friens_and_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/constraint_sprint"
        tools:text="Friends: 48"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>